[package]
name = "shadowcast"
description = "Implementation of the recursive shadowcast visible-area detection algorithm"
version = "0.3.0"
authors = ["Stephen Sherratt <sfsherratt@gmail.com>"]
license = "MIT"
documentation = "https://docs.rs/shadowcast"
repository = "https://github.com/stevebob/shadowcast.git"
homepage = "https://github.com/stevebob/shadowcast.git"
readme = "README.md"

[dependencies]
direction = { path = "/home/steve/src/direction" }
coord_2d = { path = "/home/steve/src/coord-2d" }
num-traits = { version = "0.2", default-features = false }
